fix: some colors, when selected, turned white therefore barely readable. now they along with their checkmarks are black

--- a/src/main-container/card-container/card-container.component.scss
+++ b/src/main-container/card-container/card-container.component.scss
@@ -96,3 +96,8 @@ mat-chip-listbox {
 .mat-mdc-standard-chip#fekete,#zold,#lila,#kek,#magenta,#piros,#dual {
   --mdc-chip-label-text-color: white;
 }
+
+.mdc-evolution-chip--selected#feher,#sarga,#narancs,#multicolor {
+  --mdc-chip-selected-label-text-color: black;
+  --mdc-chip-with-icon-selected-icon-color: black;
+}
